2014-10-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/dates.cpp (advanceDate): Use a calendar from the RQL context

2014-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/rquantlib_impl.h: New header with implementations for
	as<>() and wrap(), currently only for Date mapping between QL and R
	* inst/include/rquantlib_wrappers.h: Reduced to declarations only

	* inst/include/RQuantLib.h: Include new header rquantlib_impl.h if
	and only if a #define is set accordingly

	* src/dates.cpp: Include new header rquantlib_impl.h to have it in
	default build for package just once

	* R/inline.R (CFlags): Plugin builds set the #define for new header file

2014-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* man/DiscountCurve.Rd: Do not include two-year swap ("s2y") in curve
	parameters, and correct evaluation date -- with thanks to Luigi Ballabio
	* man/Bond.Rd: Ditto

2014-10-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.options.R: Skip AsianOption() test on Windows

2014-10-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.in: Add OpenMP support (conditional on R having it)

	* configure.ac: Renamed from configure.in; also updated check for
	QuantLib to ensure version 1.4.0 or later is used

	* inst/unitTests/runit.calendar.R (test.isBusinessDay): adjust parens

2014-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: New minor version

	* src/dates.cpp: New place for as<> and wrap() for Quantlib::Date
	* inst/include/RQuantLib.h: No longer include rquantlib_wrappers.h

	* src/Makevars.win: Add -fpermissive to cope with a 'long long'
	conversion, also enable support for OpenMP on Windows

2014-10-15  Michele Salvadore <michele.salvadore@gmail.com>

	* src/bonds.cpp: Updated FixedRateBond() to better match the function
	signature in the QuantLib library while making it more flexible
	* src/utils.cpp:
	* bond.R: Ditto

	* man/Bond.Rd: Updated accordingly
	* man/FixedRateBond.Rd: Ditto
