@@ -1,3 +1,8 @@
+2014-10-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/bonds.cpp: Use the calendar from the RQL context
+	* src/zero.cpp: Ditto
+
 2014-10-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/dates.cpp (advanceDate): Use a calendar from the RQL context
